# SimpleTest

./: .color_coded  .gitmodules  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  README.md  build.sh  rebuild.sh
source/: Main.cpp
